[gd_scene load_steps=7 format=3 uid="uid://jfeihc30hytn"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_8m7ve"]
[ext_resource type="Texture2D" uid="uid://wh5aosa756am" path="res://Sprites/nyan_sheet.png" id="2_l3ruh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hi1ya"]
size = Vector2(95.7203, 104.139)

[sub_resource type="Animation" id="Animation_i1x1x"]
resource_name = "run"
length = 0.3
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8o14m"]
_data = {
"run": SubResource("Animation_i1x1x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j827o"]
size = Vector2(216, 212)

[node name="Dtct_stat" type="Node2D"]
scale = Vector2(0.25, 0.25)

[node name="rcv" type="Area2D" parent="."]
script = ExtResource("1_8m7ve")

[node name="Sprite2D" type="Sprite2D" parent="rcv"]
scale = Vector2(0.685, 0.685)
texture = ExtResource("2_l3ruh")
hframes = 5
frame = 2

[node name="rcv_col" type="CollisionShape2D" parent="rcv"]
position = Vector2(-0.0114354, 0.0698483)
rotation = -0.00290892
shape = SubResource("RectangleShape2D_hi1ya")
debug_color = Color(0.698039, 0.301961, 0.968627, 0.419608)

[node name="Timer" type="Timer" parent="rcv"]
wait_time = 0.15

[node name="player_anim" type="AnimationPlayer" parent="rcv"]
autoplay = "run"
libraries = {
"": SubResource("AnimationLibrary_8o14m")
}

[node name="pub" type="Area2D" parent="."]
monitoring = false

[node name="pub_col1" type="CollisionShape2D" parent="pub"]
shape = SubResource("RectangleShape2D_j827o")
debug_color = Color(0.207843, 0.603922, 0.596078, 0.419608)

[connection signal="area_entered" from="rcv" to="rcv" method="_on_area_entered"]
[connection signal="area_exited" from="rcv" to="rcv" method="_on_area_exited"]
[connection signal="input_event" from="rcv" to="rcv" method="_on_input_event"]
[connection signal="mouse_entered" from="rcv" to="rcv" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="rcv" to="rcv" method="_on_mouse_exited"]
[connection signal="timeout" from="rcv/Timer" to="rcv" method="_on_timer_timeout"]
